--- a/src/components/layoutView/BodyLayout.css
+++ b/src/components/layoutView/BodyLayout.css
@@ -1,3 +1,8 @@
+.content-body-layout-view{
+  width: 100%;
+  height: 100vh;
+}
+
 .project-title-addproject-btn-container{
     display: flex;
     margin-left: 100px;
