--- a/src/components/layoutView/BodyLayout.css
+++ b/src/components/layoutView/BodyLayout.css
@@ -1,8 +1,3 @@
-.content-body-layout-view{
-  width: 100%;
-  height: 100vh;
-}
-
 .project-title-addproject-btn-container{
     display: flex;
     margin-left: 100px;
@@ -34,7 +29,7 @@
     display: flex;
     flex-direction: row-reverse;
     gap: 2px;
-    margin-right: 100px;
+    margin-right: 20px;
     align-items: center;
 }
 
@@ -71,5 +66,10 @@
     width: 24px; 
     height: 24px;
     object-fit: contain;
+  }
+  .view-btns-icon{
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
   }
   
