--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,19 @@ code {
   /* Shadows */
   --card-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
 }
+
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: rgb(228, 228, 232);
+  border: 1px solid rgb(215, 215, 217);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: rgb(171, 173, 180);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
